--- a/AppBlobAzure/AppBlobAzure/Views/ImageBrowserPage.xaml
+++ b/AppBlobAzure/AppBlobAzure/Views/ImageBrowserPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppBlobAzure.Views.ImageBrowserPage">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout Margin="20,35,20,20">
             <Label Text="Image File Browser"
                 FontAttributes="Bold" 
                 HorizontalOptions="Center" />
